--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,33 @@
     <link rel="stylesheet" href="assests/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
-    <header>Header Content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <section>
         Main Image
     </section>
     <section>
         Club Ethos
-    </section> 
+    </section>
     <section>
         Running Locations, Distances, and Times
     </section>
@@ -27,4 +46,5 @@
         Social Media Links Here
     </footer>
 </body>
+
 </html>
